# soccer-challenge

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
src/radai/: __init__.py  __main__.py
tests/unit/: test__radai.py
